--- a/templates/index.html
+++ b/templates/index.html
@@ -2,4 +2,13 @@
 
 {% block body%}
 
+<div class="login_wrapper">
+    <h1>Welcome to Catch!</h1>
+    <form action="{{ url_for('login') }}" method="post">
+        <input type="text" name="username_entry" placeholder="Username" required>
+        <input type="password" name="password_entry" placeholder="Password" required>
+        <button type="submit">Login</button>
+    </form>
+</div>
+
 {% endblock %}
