working login module - no validation yet

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <li><a href="{{ url_for('fish_identifier') }}" class="nav_item">Identifier</a></li>
         <li><a href="{{ url_for('map') }}" class="nav_item">Map</a></li>
         <li><a href="{{ url_for('fish_dex') }}" class="nav_item">Fish-Dex</a></li>
-        <li><a href="{{ url_for('access_login_page') }}" class="nav_item">Login</a></li>
+        <li><a href="{{ url_for('login') }}" class="nav_item">Login</a></li>
     </ul>
 </div>
 <div id="content">
