--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.login_wrapper {
+#login_wrapper {
     width: 30%;
     border: 1px solid black;
     margin: 15% auto;
@@ -10,8 +10,29 @@
     vertical-align: center;
 }
 
+#login_wrapper h1{
+    text-align:center;
+}
+
 .login_form {
     margin: 0 auto;
+}
+
+.login_form ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.login_form li{
+    padding: 5px 0;
+}
+
+.register_button{
+    text-decoration: none;
+    color: black;
+    font-size: 12px;
 }
 
 #sidebar {
