added validation to login and register inputs, got flashes working

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta name="viewport" content="initial-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-        <title>Fishing App</title>
-    </head>
-    <body>
-        <div class='wrapper'>
-            {% block body %}
-            {% endblock %}
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Fishing App{% endblock %}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <div class="container">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <ul class="flashes">
+                    {% for category, message in messages %}
+                        <li class="{{ category }}">{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+        {% block body %}
+        {% endblock %}
+    </div>
+</body>
 </html>
