--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -7,8 +7,8 @@
     <div class="login_form">
         <form action="{{ url_for('login') }}" method="post">
             <ul>
-                <li><input type="text" name="username_entry" placeholder="Username" required></li>
-                <li><input type="password" name="password_entry" placeholder="Password" required></li>
+                <li><input type="text" name="username_entry" placeholder="Username"></li>
+                <li><input type="password" name="password_entry" placeholder="Password"></li>
                 <li><a href="/register" class="register_button">Register</a></li>
                 <li><button type="submit">Login</button></li>
             </ul>
