post form set up, not yet done post displaying

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,39 @@
         <li><a href="{{ url_for('map') }}" class="nav_item">Map</a></li>
         <li><a href="{{ url_for('fish_dex') }}" class="nav_item">Fish-Dex</a></li>
         {% if 'user_id' in session %}
-            <li><a href="{{ url_for('profile') }}" class="username-btn">{{ session['username'] }}</a></li>
-            <li><a href="{{ url_for('logout') }}" class="logout-btn">logout</a></li>
+            <li>
+                <a href="{{ url_for('profile') }}" class="username_btn">
+                    <img src="{{ url_for('static', filename='images/blank_profile_pic.png') }}" alt="Profile" class="profile-img">
+                    {{ session['username'] }}
+                </a>
+            </li>
+            <li><a href="{{ url_for('logout') }}" class="logout_btn">Logout</a></li>
         {% else %}
-            <li><a href="{{ url_for('login') }}" class="login-btn">Login</a></li>
+            <li>
+                <a href="{{ url_for('login') }}" class="login_btn">
+                    <img src="{{ url_for('static', filename='images/blank_profile_pic.png') }}" alt="Profile" class="profile-img">
+                    Login
+                </a>
+            </li>
         {% endif %}
     </ul>
 </div>
 <div id="content">
+    {% if 'user_id' in session %}
+    <form action="{{ url_for('create_post') }}" method="post" enctype="multipart/form-data">
+        <input type="file" name="image" accept="image/*" required>
+        <textarea name="caption" placeholder="Add a caption..."></textarea>
+        <button type="submit">Post</button>
+    </form>
+    {% endif %}
+    <div class="posts">
+        {% for post in posts %}
+        <div class="post">
+            <img src="{{ url_for('static', filename=post.image_path) }}" alt="Post Image">
+            <p>{{ post.caption }}</p>
+        </div>
+        {% endfor %}
+    </div>
 </div>
 
 {% endblock %}
