--- a/static/style.css
+++ b/static/style.css
@@ -32,27 +32,48 @@
 .register_button{
     text-decoration: none;
     color: black;
-    font-size: 12px;
+    font-size: clamp(16px, 5vw, 50px);
 }
 
 #sidebar {
-    width: 20%;
+    width: clamp(200px, 20%, 300px);
     height: 100%;
     position: fixed;
     top: 0;
     left: 0;
     border: 1px solid black;
-    padding: 10px;
+    padding: 25px;
 }
 
 #sidebar ul{
     list-style: none;
     margin: 0;
     padding: 0;
+    font-size: clamp(16px, 1vw, 50px);
 }
 
 #sidebar li{
-    padding: 10px 0;
+    padding: 15px 0;
+}
+
+#sidebar a{
+    text-decoration: none;
+    color: black;
+    font-size: clamp(16px, 1vw, 50px);
+}
+
+.profile-img {
+    width: 30px; /* Adjust size */
+    height: 30px;
+    border-radius: 50%; /* Makes it circular */
+    margin-right: 2px; /* Adjust spacing */
+    vertical-align: middle;
+}
+
+.logout_btn{
+    position: fixed;
+    bottom: 10px;
+    left: 25px;
 }
 
 .nav_bar{
@@ -66,4 +87,70 @@
 }
 .nav_item:hover {
     color: darkgray;
+}
+
+#content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+form {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 500px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+form input[type="file"],
+form textarea {
+    width: 95%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+form button {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: #0056b3;
+}
+
+/* Style the posts */
+.posts {
+    width: 100%;
+    max-width: 500px;
+}
+
+.post {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.post img {
+    max-width: 100%;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.post p {
+    margin: 0;
 }
