--- a/static/style.css
+++ b/static/style.css
@@ -93,6 +93,8 @@
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
+    margin-left: clamp(200px, 20%, 300px); /* Leaves space for the sidebar */
+    width: calc(100% - clamp(200px, 20%, 300px)); /* Prevents overlap */
 }
 
 #content form {
@@ -131,7 +133,7 @@
 
 /* Style the posts */
 .posts {
-    width: 100%;
+    width: 90%;
     max-width: 500px;
 }
 
@@ -152,4 +154,31 @@
 
 .post p {
     margin: 0;
+    text-align: left;
+    flex-grow: 1;
+}
+
+.post h4 {
+    text-align: center;
+    vertical-align: center;
+    margin-top: 0;
+}
+
+/* Responsive Fix */
+@media (max-width: 768px) {
+    #sidebar {
+        position: relative; /* Sidebar moves with content */
+        width: 100%; /* Sidebar spans full width */
+        height: auto; /* Adjusts height automatically */
+        text-align: center;
+    }
+
+    #content {
+        margin-left: 0; /* Remove left margin on small screens */
+        width: 100%;
+    }
+
+    .posts {
+        width: 100%;
+    }
 }
