--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
     <div class="posts">
         {% for post in posts %}
             <div class="post">
+                <h4>{{post[2]}}</h4>
                 <img src="{{ url_for('static', filename=post[0]) }}" alt="Post Image">
                 <p>{{ post[1] }}</p>
             </div>
