fish_dex working woohoo im the goat

--- a/templates/identifier.html
+++ b/templates/identifier.html
@@ -4,4 +4,4 @@
 
 <iframe src="https://www.yeschat.ai/i/gpts-2OToO8aDZZ-Fish-Identifier-GPT" class="fish_ai_insert"></iframe>
 
-{% endblock %}x
+{% endblock %}
