--- a/static/style.css
+++ b/static/style.css
@@ -65,12 +65,10 @@
     font-size: clamp(16px, 1vw, 50px);
 }
 
-.profile-img {
-    width: 30px; /* Adjust size */
-    height: 30px;
-    border-radius: 50%; /* Makes it circular */
-    margin-right: 2px; /* Adjust spacing */
-    vertical-align: middle;
+#sidebar ion-icon {
+    font-size: clamp(16px, 1vw, 50px);
+    color: black;
+    vertical-align: center;
 }
 
 .logout_btn{
@@ -227,6 +225,70 @@
     overflow: hidden; /* Hide overflow content */
     text-overflow: ellipsis; /* Add ellipsis for overflow text */
     white-space: nowrap; /* Prevent text from wrapping */
+}
+
+
+/* Modal styling */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 100%; /* Could be more or less, depending on screen size */
+    max-width: 500px; /* Cap the maximum width */
+    border-radius: 10px;
+}
+
+.modal-content form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modal-content input[type="file"] {
+    width: 100%; /* Make the file input take the full width */
+    margin-bottom: 10px; /* Add some space below the input */
+}
+
+.modal-content button {
+    width: 100%; /* Make the button take the full width */
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+}
+
+.modal-content button:hover {
+    background-color: #0056b3;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* CSS STYLING FOR RESPONSIVE STUFF */
