--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Fishing App{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
     <div class="container">
@@ -26,7 +29,7 @@
                 {% if 'user_id' in session %}
                     <li>
                         <a href="{{ url_for('profile') }}" class="username_btn">
-                            <img src="{{ url_for('static', filename='images/blank_profile_pic.png') }}" alt="Profile" class="profile-img">
+                            <span><ion-icon name="person-circle-outline"></ion-icon></span>
                             {{ session['username'] }}
                         </a>
                     </li>
@@ -34,7 +37,7 @@
                 {% else %}
                     <li>
                         <a href="{{ url_for('login') }}" class="login_btn">
-                            <img src="{{ url_for('static', filename='images/blank_profile_pic.png') }}" alt="Profile" class="profile-img">
+                            <span><ion-icon name="person-circle-outline"></ion-icon></span>
                             Login
                         </a>
                     </li>
