--- a/static/style.css
+++ b/static/style.css
@@ -154,6 +154,9 @@
     max-width: 100%;
     border-radius: 10px;
     margin-bottom: 10px;
+    max-height: 300px;
+    height: auto;
+    object-fit: contain;
 }
 
 .post p {
@@ -181,20 +184,13 @@
 
 /* CSS STYLING FOR FISH-DEX */
 
-.found_fish {
+.found_fish, .unfound_fish {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* Create a 3-column grid */
     gap: 20px;
     padding: 20px;
-    margin-left: clamp(50px, 10%, 300px); /* Leaves space for the sidebar */
-}
-
-.unfound_fish {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Create a 3-column grid */
-    gap: 20px;
-    padding: 20px;
-    margin-left: clamp(50px, 10%, 300px); /* Leaves space for the sidebar */
+    margin: 0 auto; /* Center the divs */
+    max-width: calc(100% - clamp(150px, 20%, 300px)); /* Ensure they do not overlap the sidebar */
 }
 
 .fish_card {
@@ -203,7 +199,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     max-width: 300px; /* Cap the maximum width */
-    max-height: 400px; /* Cap the maximum height */
+    max-height: 200px; /* Cap the maximum height */
     overflow: hidden; /* Hide overflow content */
     display: flex;
     flex-direction: column;
@@ -212,9 +208,10 @@
 
 .fish_card img {
     max-width: 100%;
-    max-height: 200px; /* Cap the maximum height for the image */
+    height: auto; /* Maintain aspect ratio */
+    max-height: 100px; /* Cap the maximum height for the image */
     border-radius: 10px;
-    object-fit: cover; /* Ensure the image covers the area */
+    object-fit: contain; /* Ensure the image fits within the area */
     margin-bottom: 10px;
 }
 
@@ -225,6 +222,8 @@
     overflow: hidden; /* Hide overflow content */
     text-overflow: ellipsis; /* Add ellipsis for overflow text */
     white-space: nowrap; /* Prevent text from wrapping */
+    display: flex;
+    align-items: flex-end; /* Align text to the bottom */
 }
 
 
