--- a/templates/adminview_layout.html
+++ b/templates/adminview_layout.html
@@ -20,7 +20,7 @@
                 {% endif %}
             {% endwith %}
             <div id="sidebar">
-                <h1>Catch</h1>
+                <h1>Admin View</h1>
                 <ul>
                     <li><a href="{{ url_for('admin_home') }}" class="nav_item">Home</a></li>
                     <li><a href="{{ url_for('user_management') }}" class="nav_item">User Management</a></li>
