--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,6 @@
     border: 1px solid black;
     margin: 15% auto;
     padding: 30px 20px;
-    vertical-align: center;
 }
 
 #login_wrapper h1{
@@ -99,40 +98,7 @@
     margin-top: 20px;
     margin-left: clamp(200px, 20%, 300px); /* Leaves space for the sidebar */
     width: calc(100% - clamp(200px, 20%, 300px)); /* Prevents overlap */
-}
-
-#content form {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 500px;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-#content form input[type="file"],
-#content form textarea {
-    width: 95%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-#content form button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: white;
-    cursor: pointer;
-}
-
-#content form button:hover {
-    background-color: #0056b3;
+    position: relative;
 }
 
 /* Style the posts */
@@ -262,6 +228,7 @@
 
 .modal-content input[type="text"],
 .modal-content input[type="file"],
+.modal-content textarea,
 .modal-content select {
     width: 100%; /* Make the input fields take the full width */
     padding: 10px;
@@ -297,6 +264,30 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+/* Button to open the modal */
+.open-modal-btn {
+    position: fixed;
+    bottom: 20px;
+    left: (50% + clamp(150px, 20%, 300px));
+    transform: translateX(-50%);
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    font-size: 30px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.open-modal-btn:hover {
+    background-color: #0056b3;
 }
 
 /* CSS STYLING FOR ADMIN TABLES */
