--- a/templates/adminview_layout.html
+++ b/templates/adminview_layout.html
@@ -53,6 +53,18 @@
                         }
                     });
                 });
+
+                // Automatically remove flash messages after 3 seconds
+                setTimeout(() => {
+                    const flashes = document.querySelectorAll('.flashes li');
+                    flashes.forEach(flash => {
+                        flash.style.display = 'none';
+                    });
+                    const ul = document.querySelector('.flashes');
+                    if (ul) {
+                        ul.style.display = 'none';
+                    }
+                }, 3000); // 3 seconds
             });
         </script>
     </body>
