--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,6 +2,7 @@
 
 {% block body%}
 
-<img src="static/images/blank_profile_pic.png" class="profile-image" alt="Profile Picture">
+<img src="static/images/blank_profile_pic.png" class="profile_image" alt="Profile Picture">
+<h1>{{user_data[1]}}</h1>
 
 {% endblock %}
