--- a/templates/fish_dex.html
+++ b/templates/fish_dex.html
@@ -2,54 +2,58 @@
 
 {% block body %}
 
-<h1>Fish Dex - Collect them all!</h1>
+<div id="content">
+    
+    <h1>Fish Dex - Collect them all!</h1>
 
-<h3>--- Caught Fish ---</h3>
+    <h3>--- Caught Fish ---</h3>
 
-<div class="found_fish">
-    {% for fish in caught_list %}
-        <div class="fish_card" onclick="openModal('{{ fish[1] }}', '{{ fish[0]}}')">
-            <img src="{{ fish[3] }}" alt="/static/images/blank_fish_image.jpg">
-            <h3>{{ fish[1] }}</h3>
-        </div>
-    {% endfor %}
-</div>
-
-<h3>--- Yet To Catch ---</h3>
-
-<div class="unfound_fish">
-    {% for fish in uncaught_list %}
-        <div class="fish_card" onclick="openModal('{{ fish }}', '')">
-            <img src="/static/images/blank_fish_image.jpg" alt="no img">
-            <h3>{{ fish }}</h3>
-        </div>
-    {% endfor %}    
-</div>
-
-<!-- Modal Form -->
-<div id="uploadModal" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal()">&times;</span>
-        <h2>Upload Fish Image</h2>
-        <form action="{{ url_for('upload_fish_image') }}" method="post" enctype="multipart/form-data">
-            <input type="hidden" id="fish_name" name="fish_name">
-            <input type="hidden" id="fish_id" name="fish_id">
-            <input type="file" name="image" accept="image/*" required>
-            <button type="submit">Upload</button>
-        </form>
+    <div class="found_fish">
+        {% for fish in caught_list %}
+            <div class="fish_card" onclick="openModal('{{ fish[1] }}', '{{ fish[0]}}')">
+                <img src="{{ fish[3] }}" alt="/static/images/blank_fish_image.jpg">
+                <h3>{{ fish[1] }}</h3>
+            </div>
+        {% endfor %}
     </div>
+
+    <h3>--- Yet To Catch ---</h3>
+
+    <div class="unfound_fish">
+        {% for fish in uncaught_list %}
+            <div class="fish_card" onclick="openModal('{{ fish }}', '')">
+                <img src="/static/images/blank_fish_image.jpg" alt="no img">
+                <h3>{{ fish }}</h3>
+            </div>
+        {% endfor %}    
+    </div>
+
+    <!-- Modal Form -->
+    <div id="uploadModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2>Upload Fish Image</h2>
+            <form action="{{ url_for('upload_fish_image') }}" method="post" enctype="multipart/form-data">
+                <input type="hidden" id="fish_name" name="fish_name">
+                <input type="hidden" id="fish_id" name="fish_id">
+                <input type="file" name="image" accept="image/*" required>
+                <button type="submit">Upload</button>
+            </form>
+        </div>
+    </div>
+
+    <script>
+        function openModal(fishName, fishId) {
+            document.getElementById('fish_name').value = fishName;
+            document.getElementById('fish_id').value = fishId;
+            document.getElementById('uploadModal').style.display = 'block';
+        }
+
+        function closeModal() {
+            document.getElementById('uploadModal').style.display = 'none';
+        }
+    </script>
+
 </div>
-
-<script>
-    function openModal(fishName, fishId) {
-        document.getElementById('fish_name').value = fishName;
-        document.getElementById('fish_id').value = fishId;
-        document.getElementById('uploadModal').style.display = 'block';
-    }
-
-    function closeModal() {
-        document.getElementById('uploadModal').style.display = 'none';
-    }
-</script>
 
 {% endblock %}
