--- a/templates/index.html
+++ b/templates/index.html
@@ -2,41 +2,43 @@
 
 {% block body%}
 
-{% if 'user_id' in session %}
-    <!-- Button to open the modal -->
-    <button class="open-modal-btn" onclick="openCreatePostModal()">+</button>
+<div id="content">
+    {% if 'user_id' in session %}
+        <!-- Button to open the modal -->
+        <button class="open-modal-btn" onclick="openCreatePostModal()">+</button>
 
-    <!-- Modal Form -->
-    <div id="createPostModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeCreatePostModal()">&times;</span>
-            <h2>Create Post</h2>
-            <form action="{{ url_for('create_post') }}" method="post" enctype="multipart/form-data">
-                <input type="file" name="image" accept="image/*" required>
-                <textarea name="caption" placeholder="Add a caption..."></textarea>
-                <button type="submit">Post</button>
-            </form>
+        <!-- Modal Form -->
+        <div id="createPostModal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="closeCreatePostModal()">&times;</span>
+                <h2>Create Post</h2>
+                <form action="{{ url_for('create_post') }}" method="post" enctype="multipart/form-data">
+                    <input type="file" name="image" accept="image/*" required>
+                    <textarea name="caption" placeholder="Add a caption..."></textarea>
+                    <button type="submit">Post</button>
+                </form>
+            </div>
         </div>
+    {% endif %}
+    <div class="posts">
+        {% for post in posts %}
+            <div class="post">
+                <h4>{{post[2]}}</h4>
+                <img src="{{ url_for('static', filename=post[0]) }}" alt="Post Image">
+                <p>{{ post[1] }}</p>
+            </div>
+        {% endfor %}
     </div>
-{% endif %}
-<div class="posts">
-    {% for post in posts %}
-        <div class="post">
-            <h4>{{post[2]}}</h4>
-            <img src="{{ url_for('static', filename=post[0]) }}" alt="Post Image">
-            <p>{{ post[1] }}</p>
-        </div>
-    {% endfor %}
+
+    <script>
+        function openCreatePostModal() {
+            document.getElementById('createPostModal').style.display = 'block';
+        }
+
+        function closeCreatePostModal() {
+            document.getElementById('createPostModal').style.display = 'none';
+        }
+    </script>
 </div>
-
-<script>
-    function openCreatePostModal() {
-        document.getElementById('createPostModal').style.display = 'block';
-    }
-
-    function closeCreatePostModal() {
-        document.getElementById('createPostModal').style.display = 'none';
-    }
-</script>
 
 {% endblock %}
