--- a/static/style.css
+++ b/static/style.css
@@ -281,6 +281,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
