--- a/templates/fish_dex.html
+++ b/templates/fish_dex.html
@@ -34,6 +34,7 @@
             <span class="close" onclick="closeModal()">&times;</span>
             <h2>Upload Fish Image</h2>
             <form action="{{ url_for('upload_fish_image') }}" method="post" enctype="multipart/form-data">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                 <input type="hidden" id="fish_name" name="fish_name">
                 <input type="hidden" id="fish_id" name="fish_id">
                 <input type="file" name="image" accept="image/*" required>
