--- a/templates/user_management.html
+++ b/templates/user_management.html
@@ -33,6 +33,7 @@
         <span class="close" onclick="closeEditModal()">&times;</span>
         <h2>Edit User</h2>
         <form id="editUserForm" action="{{ url_for('edit_user') }}" method="post">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <input type="hidden" id="edit_user_id" name="user_id">
             <label for="edit_username">Username:</label>
             <input type="text" id="edit_username" name="username" required>
@@ -53,6 +54,7 @@
         <h2>Delete User</h2>
         <p>Are you sure you want to delete this user?</p>
         <form id="deleteUserForm" action="{{ url_for('delete_user') }}" method="post">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <input type="hidden" id="delete_user_id" name="user_id">
             <button type="submit">Delete</button>
             <button type="button" onclick="closeDeleteModal()">Cancel</button>
