--- a/static/style.css
+++ b/static/style.css
@@ -67,7 +67,8 @@
 #sidebar ion-icon {
     font-size: clamp(16px, 1vw, 50px);
     color: black;
-    vertical-align: center;
+    vertical-align: top;
+    padding-right: 5px;
 }
 
 .logout_btn{
@@ -255,7 +256,6 @@
 /* CSS STYLING FOR PROFILE PAGE */
 
 .profile_container {
-    max-width: 800px;
     margin: 0 auto;
     padding: 20px;
 }
@@ -267,7 +267,7 @@
 }
 
 .profile_image {
-    width: 150px;
+    width: 200px;
     height: 150px;
     border-radius: 50%;
     margin-right: 20px;
@@ -279,7 +279,7 @@
 
 .profile_details h1 {
     margin: 0;
-    font-size: 24px;
+    font-size: 45px;
 }
 
 .profile_details p {
