--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -49,7 +49,7 @@
                     {% if 'user_id' in session %}
                         <li>
                             <a href="{{ url_for('profile') }}" class="username_btn">
-                                <span><ion-icon name="person-circle-outline"></ion-icon></span>
+                                <ion-icon name="person-circle-outline"></ion-icon>
                                 {{ session['username'] }}
                             </a>
                         </li>
