--- a/templates/adminview_layout.html
+++ b/templates/adminview_layout.html
@@ -22,14 +22,34 @@
             <div id="sidebar">
                 <h1>Admin View</h1>
                 <ul>
-                    <li><a href="{{ url_for('admin_home') }}" class="nav_item">Home</a></li>
-                    <li><a href="{{ url_for('user_management') }}" class="nav_item">User Management</a></li>
-                    <li><a href="{{ url_for('post_management') }}" class="nav_item">Post Management</a></li>
+                    <li>
+                        <a href="{{ url_for('admin_home') }}" class="nav_item">
+                            <ion-icon name="home-outline"></ion-icon>
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('user_management') }}" class="nav_item">
+                            <ion-icon name="people-outline"></ion-icon>
+                            User Management
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('post_management') }}" class="nav_item">
+                            <ion-icon name="albums-outline"></ion-icon>
+                            Post Management
+                        </a>
+                    </li>
                     <li class="user_info">
-                        <span><ion-icon name="person-circle-outline"></ion-icon></span>
+                        <ion-icon name="person-circle-outline"></ion-icon>
                         <p>{{ session['username'] }}</p>
                     </li>
-                    <li><a href="{{ url_for('logout') }}" class="logout_btn">Logout</a></li>
+                    <li>
+                        <a href="{{ url_for('logout') }}" class="logout_btn">
+                            <ion-icon name="exit-outline"></ion-icon>
+                            Logout
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div id="content">
